# MusicPlay

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cailei/musicplay/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioTrackPlayer.cpp  AudioTrackPlayer.h  CLFFmpeg.cpp  CLFFmpeg.h  CMakeLists.txt  call_java_back.cpp  call_java_back.h  cmdutils.c  cmdutils.h  ffmpeg_filter.c  ffmpeg_mod.c  ffmpeg_opt.c  native-lib.cpp  test.c
app/src/main/java/com/cailei/musicplay/: MainActivity.kt  VideoCompress.kt
app/src/main/java/com/cailei/musicplay/listener/: PlayerErrorListener.kt
app/src/main/java/com/cailei/musicplay/music/: MusicPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/cailei/musicplay/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
